changed website content

--- a/index.html
+++ b/index.html
@@ -2,46 +2,39 @@
 
 <html lang="en">
     <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link href="t_styles.css" rel="stylesheet">
-        <title>Alla Barbalat: Trade Show Spokesmodel</title>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-PEHQ5S7XNV"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-PEHQ5S7XNV');
-        </script>
-        </head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+            <link href="styles.css" rel="stylesheet">
+        <title>Trade Show Talent Booking</title>
+    </head>
         <body class="d-flex h-100 text-center text-white">
         <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
-            <h3 class="float-md-start mb-0">Alla Barbalat</h3>
+            <h3 class="float-md-start mb-0">Trade Show Talent</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                <a class="nav-link" href="experience.html">Trade Show Experience</a>
-                <a class="nav-link" href="book.html">Book Me</a>
+                <a class="nav-link" href="book.html">Booking Inquiry</a>
             </nav>
             </div>
         </header>
-        <main class="px-3 body padded ">
-            <h1 class="padded ">Alla Barbalat</h1>
-            <img src="images/Head_shot.jpg" alt="Smiling woman" class="sm-screen-img d-block d-lg-none rounded">
-            <h5 class="padded pt-2 mt-2 pb-2">Experienced Trade Show Spokesmodel</h5>
+        <main class="px-3 body padded">
+            <h1 class="padded ">Stand Out at Every Trade Show.</h1>
+            <h5 class="padded pt-2 mt-2 pb-2"> Book Professional Booth Talent Effortlessly.</h5>
             <div class="mt-2">
-                <p class="lead">As a well-spoken, tech-savvy spokesmodel,
-                Alla is a valuable asset to any event or trade show. Always smiling and
-                always professional, Alla is committed to engaging in spirited and effective branding.</p></div>
+                <p class="lead">
+
+                </p></div>
             <div class="mt-2">
-            <p class="lead"> Her dedication and enthusiasm drive sales while also developing meaningful,
-            long-lasting business relationships for clients. </p> </div>
+                Make every event count with talent that draws attention and maximizes your return on investment. Our trusted professionals ensure your booth becomes a magnet for leads and brand engagement.
+                <p class="lead">  
+                <li> Reliable and Experienced Talent: Vetted professionals who excel in attendee engagement, product demonstrations, lead generation, and lead qualification </li>
+                <li> Easy Online Booking: Streamlined selection and booking process tailored to your event's specific needs </li>
+                <li> Flexible Options: Choose talent based on expertise, location, event duration, and special requirements </li>     
+                <li> Nationwide Coverage: Talent available for trade shows and events across major cities and venues in the U.S. </li> </p> </div>
             <div class="mt-2">
-            <a href="book.html" class="btn btn-lg fw-bold border-white bg-white">Book Me</a>
+            <a href="book.html" class="btn btn-lg fw-bold border-white bg-white">Book Talent</a>
             </div>
         </main>
         </div>
@@ -64,7 +57,7 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                Copyright &#169; 2022 Alla Barbalat. All Rights Reserved.
+                Copyright &#169; 2025 Alla Barbalat. All Rights Reserved.
                 </div>
             </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
