--- a/book.html
+++ b/book.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link href="t_styles.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
         <title>Book Alla Barbalat for a Trade Show</title>
         <script>
         </script>
@@ -17,8 +17,7 @@
             <h3 class="float-md-start mb-0">Alla Barbalat</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link active"  href="index.html">Home</a>
-                <a class="nav-link" href="experience.html">Trade Show Experience</a>
-                <a class="nav-link" aria-current="page" href="book.html">Book Me</a>
+                <a class="nav-link" aria-current="page" href="book.html">Booking Inquiry</a>
             </nav>
             </div>
         </header>
@@ -107,7 +106,7 @@
                     </div>
                 </div>
                 <div class="mb-3">
-                Copyright &#169; 2022 Alla Barbalat. All Rights Reserved.
+                Copyright &#169; 2025 Alla Barbalat. All Rights Reserved.
                 </div>
             </footer>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
