--- a/book.html
+++ b/book.html
@@ -14,7 +14,7 @@
         <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
-            <h3 class="float-md-start mb-0">Alla Barbalat</h3>
+            <h3 class="float-md-start mb-0">Trade Show Talent</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link active"  href="index.html">Home</a>
                 <a class="nav-link" aria-current="page" href="book.html">Booking Inquiry</a>
