--- a/book.html
+++ b/book.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link href="styles.css" rel="stylesheet">
-        <title>Book Alla Barbalat for a Trade Show</title>
+        <link href="book_styles.css" rel="stylesheet">
+        <title>Book Professional Booth Talent for a Trade Show</title>
         <script>
         </script>
         </head>
@@ -14,10 +14,10 @@
         <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="mb-auto">
             <div>
-            <h3 class="float-md-start mb-0">Alla Barbalat</h3>
+            <h3 class="float-md-start mb-0">Trade Show Talent</h3>
             <nav class="nav nav-masthead justify-content-center float-md-end">
                 <a class="nav-link active"  href="index.html">Home</a>
-                <a class="nav-link" aria-current="page" href="book.html">Booking Inquiry</a>
+                <a class="nav-link" href="book.html">Booking Inquiry</a>
             </nav>
             </div>
         </header>
